# edgeware-node-raj

./: Cargo.toml  header.txt  rust-toolchain
.github/workflows/: build.yml  rust.yml
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  raw.rs
client/evm-tracing/src/listeners/: raw.rs
client/evm-tracing/src/types/: block.rs  single.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/types/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
node/cli/: Cargo.toml
node/cli-opt/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
node/consensus-transition/aura/: Cargo.toml
node/consensus-transition/aura/src/: import_queue.rs  lib.rs
node/consensus-transition/manual-seal/: Cargo.toml
node/consensus-transition/manual-seal/src/: consensus.rs  error.rs  lib.rs  rpc.rs  seal_block.rs
node/consensus-transition/manual-seal/src/consensus/: babe.rs
node/executor/: Cargo.toml
node/executor/benches/: bench.rs
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs  tracing.rs
node/runtime/: Cargo.toml
node/runtime-interface/: Cargo.toml
node/runtime/src/: lib.rs  migrations.rs  precompiles.rs
node/runtime/src/weights/: frame_election_provider_support.rs  frame_system.rs  mod.rs  pallet_assets.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_collective.rs  pallet_contracts.rs  pallet_election_provider_multi_phase.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_im_online.rs  pallet_indices.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_recovery.rs  pallet_scheduler.rs  pallet_timestamp.rs  pallet_tips.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
pallets/edge-treasury-reward/: Cargo.toml
pallets/edge-treasury-reward/src/: lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml  ERC20.sol
precompiles/balances-erc20/src/: mock.rs
precompiles/pallet-democracy/: Cargo.toml
precompiles/pallet-democracy/src/: lib.rs  mock.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
primitives/rpc/debug/: Cargo.toml
primitives/rpc/evm-tracing-events/: Cargo.toml
primitives/rpc/evm-tracing-events/src/: evm.rs  evm_utils.rs  lib.rs  runtime.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
utils/frame/generate-bags/: Cargo.toml
utils/frame/generate-bags/src/: lib.rs
